--- a/Gymnasiearbete/style.css
+++ b/Gymnasiearbete/style.css
@@ -42,7 +42,7 @@ header {
     width: 100%;
 
 }
-body {
+.bodymedbild {
     min-height: 100%;
     background-image: url("./bilder/loukas-konstantinidis-k1cNsoxYquQ-unsplash.jpg");
     background-size: 100%;
@@ -51,3 +51,178 @@ body {
 
     
 }
+
+.start {
+    color: white;
+    display: grid;
+    grid-template-areas: "main right";
+
+}
+.omhoodies {
+    text-align: center;
+    margin-top: 200px;
+    font-size: 22px;
+    width: 500px;
+    font-family: 'Comfortaa', cursive;
+}
+
+.rek {
+    width: 500px;
+    margin-left: 170px;
+    margin-top: 70px;
+}
+.info {
+
+    width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: 'Comfortaa', cursive;
+    margin-top: 70px;
+}
+.info h2 {
+    font-size: 22px;
+    margin-top: 40px;
+}
+.info p {
+    color: black;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 20px;
+
+    
+
+
+
+}
+.formular {
+    margin-top: 100px;
+    background-color:  white;
+    width: 500px;
+    margin-left: 500px;
+}
+.form-style-1 {
+	margin:10px auto;
+	max-width: 400px;
+	padding: 20px 12px 10px 20px;
+    font-family: 'Comfortaa', cursive;
+    font: 13px;
+}
+.form-style-1 li {
+	padding: 0;
+	display: block;
+	list-style: none;
+	margin: 10px 0 0 0;
+}
+.form-style-1 label{
+	margin:0 0 3px 0;
+	padding:0px;
+	display:block;
+	font-weight: bold;
+}
+.form-style-1 input[type=text], 
+.form-style-1 input[type=date],
+.form-style-1 input[type=datetime],
+.form-style-1 input[type=number],
+.form-style-1 input[type=search],
+.form-style-1 input[type=time],
+.form-style-1 input[type=url],
+.form-style-1 input[type=email],
+textarea, 
+select{
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	border:1px solid #BEBEBE;
+	padding: 7px;
+	margin:0px;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	-o-transition: all 0.30s ease-in-out;
+	outline: none;	
+}
+.form-style-1 input[type=text]:focus, 
+.form-style-1 input[type=date]:focus,
+.form-style-1 input[type=datetime]:focus,
+.form-style-1 input[type=number]:focus,
+.form-style-1 input[type=search]:focus,
+.form-style-1 input[type=time]:focus,
+.form-style-1 input[type=url]:focus,
+.form-style-1 input[type=email]:focus,
+.form-style-1 textarea:focus, 
+.form-style-1 select:focus{
+	-moz-box-shadow: 0 0 8px #88D5E9;
+	-webkit-box-shadow: 0 0 8px #88D5E9;
+	box-shadow: 0 0 8px #88D5E9;
+	border: 1px solid #88D5E9;
+}
+.form-style-1 .field-divided{
+	width: 49%;
+}
+
+.form-style-1 .field-long{
+	width: 100%;
+}
+.form-style-1 .field-select{
+	width: 100%;
+}
+.form-style-1 .field-textarea{
+	height: 100px;
+}
+.form-style-1 input[type=submit], .form-style-1 input[type=button]{
+	background: #4B99AD;
+	padding: 8px 15px 8px 15px;
+	border: none;
+	color: #fff;
+}
+.form-style-1 input[type=submit]:hover, .form-style-1 input[type=button]:hover{
+	background: #4691A4;
+	box-shadow:none;
+	-moz-box-shadow:none;
+	-webkit-box-shadow:none;
+}
+.form-style-1 .required{
+	color:red;
+}
+
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #252525;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 22px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    font-family: 'Comfortaa', cursive;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
